// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonPage NeonErrorPage 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-765 css-1oqqzyl-MuiContainer-root"
>
  <div
    className="makeStyles-pageContent-766"
    data-selenium="neon-page.content"
  >
    <img
      alt="NEON Data Portal"
      className="makeStyles-errorPageLogo-784"
      title="NEON Data Portal"
    />
    <h1
      className="MuiTypography-root MuiTypography-h3 makeStyles-pageTitle-780 css-scgx7b-MuiTypography-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium makeStyles-errorPageTitleIcon-782 css-i4bv87-MuiSvgIcon-root"
        data-testid="WarningIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
        />
      </svg>
      Something broke.
    </h1>
    <div>
      <span
        className="MuiTypography-root MuiTypography-caption makeStyles-errorPageCaption-783 css-287k3z-MuiTypography-root"
      >
        fail
      </span>
    </div>
    <div
      style={
        {
          "display": "flex",
        }
      }
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-l1djc-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1ei49fk-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AutorenewIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8c-.45-.83-.7-1.79-.7-2.8 0-3.31 2.69-6 6-6m6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26"
            />
          </svg>
        </span>
        Reset and Try Again
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <a
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-np7eoe-MuiButtonBase-root-MuiButton-root"
        href="/"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          {
            "marginLeft": "32px",
          }
        }
        tabIndex={0}
      >
        <span
          className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1ei49fk-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="HomeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
            />
          </svg>
        </span>
        Return Home
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
    </div>
  </div>
  <input
    data-gtm="react-page-run-time-error.stack"
    type="hidden"
    value="Disregard; this is console.error() call is expected in the NeonErrorPage test"
  />
</div>
`;

exports[`NeonPage renders a basic functional page with no props 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-22"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-1 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-2"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;

exports[`NeonPage renders sidebar items as skeletons when in appropriate state 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-607"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-586 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "calc(2000px - 348px)",
      }
    }
  >
    <div
      className="makeStyles-sidebarContainer-589"
      style={
        {
          "width": "300px",
        }
      }
    >
      <div>
        Sidebar
      </div>
    </div>
    <div
      className="makeStyles-pageContent-587"
      data-selenium="neon-page.content"
      style={
        {
          "top": "12px",
        }
      }
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18hkvsx-MuiSkeleton-root"
        style={
          {
            "height": 24,
            "margin": "16px 0px 32px 0px",
            "width": "45%",
          }
        }
      />
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
  <div
    ComponentPath="@mui/material/Backdrop"
    prop-open={true}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-backdropPaper-600 css-zuyt79-MuiPaper-root"
    >
      <h3
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18xtj6i-MuiTypography-root"
      >
        Loading
      </h3>
      <span
        className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-w2h3to-MuiCircularProgress-root"
        role="progressbar"
        style={
          {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={{}}
          />
        </svg>
      </span>
      <div
        className="makeStyles-dismissOverlay-606"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          Dismiss
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`NeonPage renders with a custom header/footer 1`] = `
[
  <header>
    <div>
      Header
    </div>
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-445 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-446"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <div>
        content
      </div>
    </div>
  </div>,
  <footer>
    <div>
      Header
    </div>
  </footer>,
  ",",
]
`;

exports[`NeonPage renders with a notification 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-349"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-380 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-381"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <div>
        content
      </div>
    </div>
  </div>,
  <div
    ComponentPath="@mui/material/Snackbar"
    prop-ContentProps="{"aria-describedby":"neon-data-portal-notifications"}"
    prop-anchorOrigin="{"vertical":"bottom","horizontal":"right"}"
    prop-open={true}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation6 MuiSnackbarContent-root makeStyles-notification-354 css-3em1l5-MuiPaper-root-MuiSnackbarContent-root"
      role="alert"
    >
      <div
        className="MuiSnackbarContent-message css-1exqwzz-MuiSnackbarContent-message"
      >
        <div
          id="neon-data-portal-notifications"
        >
          <div
            dangerouslySetInnerHTML={
              {
                "__html": "Notification",
              }
            }
          />
        </div>
      </div>
      <div
        className="MuiSnackbarContent-action css-1kr9x0n-MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-wwtaoh-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;

exports[`NeonPage renders with a title and subtitle 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-53"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-84 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-85"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <h1
        className="MuiTypography-root MuiTypography-h3 makeStyles-pageTitle-99 css-scgx7b-MuiTypography-root"
        data-selenium="neon-page.title"
      >
        Title
      </h1>
      <p
        className="MuiTypography-root MuiTypography-subtitle1 makeStyles-pageSubtitle-100 css-1fq4phv-MuiTypography-root"
        data-selenium="neon-page.subtitle"
      >
        Subtitle
      </p>
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;

exports[`NeonPage renders with an error 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-318"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-297 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-298"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18hkvsx-MuiSkeleton-root"
        style={
          {
            "height": 24,
            "margin": "16px 0px 32px 0px",
            "width": "45%",
          }
        }
      />
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
  <div
    ComponentPath="@mui/material/Backdrop"
    prop-open={true}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-backdropPaper-311 css-zuyt79-MuiPaper-root"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge css-28yyoa-MuiSvgIcon-root"
        data-testid="WarningIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
        />
      </svg>
      <h3
        className="MuiTypography-root MuiTypography-h5 css-1v75lyw-MuiTypography-root"
        style={
          {
            "marginTop": "8px",
          }
        }
      >
        Fail
      </h3>
      <div
        className="makeStyles-dismissOverlay-317"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          Dismiss
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`NeonPage renders with custom sidebar content 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-491"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-522 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "calc(2000px - 348px)",
      }
    }
  >
    <div
      className="makeStyles-sidebarContainer-525"
      style={
        {
          "width": "300px",
        }
      }
    >
      <div>
        Sidebar
      </div>
    </div>
    <div
      className="makeStyles-pageContent-523"
      data-selenium="neon-page.content"
      style={
        {
          "top": "12px",
        }
      }
    >
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;

exports[`NeonPage renders with loading message 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-170"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-149 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "3333px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-150"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18hkvsx-MuiSkeleton-root"
        style={
          {
            "height": 24,
            "margin": "16px 0px 32px 0px",
            "width": "45%",
          }
        }
      />
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
  <div
    ComponentPath="@mui/material/Backdrop"
    prop-open={true}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-backdropPaper-163 css-zuyt79-MuiPaper-root"
    >
      <h3
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18xtj6i-MuiTypography-root"
      >
        Loading
      </h3>
      <span
        className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-w2h3to-MuiCircularProgress-root"
        role="progressbar"
        style={
          {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={{}}
          />
        </svg>
      </span>
      <div
        className="makeStyles-dismissOverlay-169"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          Dismiss
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`NeonPage renders with loading message and progress 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-201"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-232 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "2000px",
      }
    }
  >
    <div
      className="makeStyles-pageContent-233"
      data-selenium="neon-page.content"
      style={
        {
          "top": "0px",
        }
      }
    >
      <span
        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18hkvsx-MuiSkeleton-root"
        style={
          {
            "height": 24,
            "margin": "16px 0px 32px 0px",
            "width": "45%",
          }
        }
      />
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
  <div
    ComponentPath="@mui/material/Backdrop"
    prop-open={true}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 makeStyles-backdropPaper-246 css-zuyt79-MuiPaper-root"
    >
      <h3
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-18xtj6i-MuiTypography-root"
      >
        Loading
      </h3>
      <span
        aria-valuenow={62}
        className="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-21zp0h-MuiCircularProgress-root"
        role="progressbar"
        style={
          {
            "height": 40,
            "transform": "rotate(-90deg)",
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={
              {
                "strokeDasharray": "126.920",
                "strokeDashoffset": "48.230px",
              }
            }
          />
        </svg>
      </span>
      <div
        className="makeStyles-dismissOverlay-252"
      >
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1cgu8v8-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-x6r74k-MuiButton-startIcon"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ClearIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          Dismiss
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`NeonPage renders with sidebar links 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-638"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-669 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "calc(2000px - 348px)",
      }
    }
  >
    <div
      className="makeStyles-sidebarContainer-672"
      style={
        {
          "width": "300px",
        }
      }
    >
      <div
        className="makeStyles-sidebarInnerStickyContainer-673 neon__sidebar-sticky"
      >
        <div
          className="makeStyles-sidebarTitleContainer-674"
        >
          <div
            className="makeStyles-sidebarTitlesContainer-677"
          >
            <h3
              className="MuiTypography-root MuiTypography-h5 makeStyles-sidebarTitle-675 css-1v75lyw-MuiTypography-root"
            >
              foo
            </h3>
            <h4
              className="MuiTypography-root MuiTypography-subtitle2 makeStyles-sidebarSubtitle-676 css-g2luyu-MuiTypography-root"
            >
              bar
            </h4>
          </div>
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth makeStyles-sidebarDivider-682 css-9mgopn-MuiDivider-root"
          style={
            {
              "width": "NaN",
            }
          }
        />
        <div>
          More
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth makeStyles-sidebarDivider-682 css-9mgopn-MuiDivider-root"
          style={
            {
              "width": "NaN",
            }
          }
        />
        <div
          className="makeStyles-sidebarLinksContainer-681"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-678 makeStyles-sidebarLinkCurrent-679 css-duangj-MuiTypography-root-MuiLink-root"
            href="#"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            style={{}}
          >
            Section A
          </a>
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-678 css-duangj-MuiTypography-root-MuiLink-root"
            href="#sectionB"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            style={{}}
          >
            Section B
          </a>
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-678 css-duangj-MuiTypography-root-MuiLink-root"
            href="#sectionC"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            style={{}}
          >
            <div>
              stub icon
            </div>
            Section C
          </a>
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-678 css-duangj-MuiTypography-root-MuiLink-root"
            href="#sectionD"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            style={{}}
          >
            Section D
          </a>
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth makeStyles-sidebarDivider-682 css-9mgopn-MuiDivider-root"
          style={
            {
              "marginBottom": "0px",
              "width": "NaN",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-pageContent-670"
      data-selenium="neon-page.content"
      style={
        {
          "top": "12px",
        }
      }
    >
      <div>
        content
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;

exports[`NeonPage renders with sidebar links as standlone children 1`] = `
[
  <header
    className="makeStyles-skeletonHeader-755"
    id="header"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "120px",
          "width": "100%",
        }
      }
    />
  </header>,
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-outerPageContainer-734 css-1oqqzyl-MuiContainer-root"
    style={
      {
        "maxWidth": "calc(2000px - 470px)",
      }
    }
  >
    <div
      className="makeStyles-sidebarContainer-737 sidebarClassName"
      style={
        {
          "width": "422px",
        }
      }
    >
      <div
        className={null}
      >
        <div
          className="makeStyles-sidebarTitleContainer-739"
        />
        <hr
          className="MuiDivider-root MuiDivider-fullWidth makeStyles-sidebarDivider-747 css-9mgopn-MuiDivider-root"
          style={
            {
              "width": "NaN",
            }
          }
        />
        <div
          className="makeStyles-sidebarLinksContainer-746"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-743 makeStyles-sidebarLinkCurrent-744 css-duangj-MuiTypography-root-MuiLink-root"
            href="#sectionA"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            style={{}}
          >
            Section A
          </a>
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways makeStyles-sidebarLink-743 makeStyles-sidebarLinkCurrent-744 css-duangj-MuiTypography-root-MuiLink-root"
            href="#sectionA"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            style={{}}
          >
            Section B
          </a>
        </div>
        <hr
          className="MuiDivider-root MuiDivider-fullWidth makeStyles-sidebarDivider-747 css-9mgopn-MuiDivider-root"
          style={
            {
              "marginBottom": "0px",
              "width": "NaN",
            }
          }
        />
      </div>
    </div>
    <div
      className="makeStyles-pageContent-735"
      data-selenium="neon-page.content"
      style={
        {
          "top": "12px",
        }
      }
    >
      <h1
        className="MuiTypography-root MuiTypography-h3 makeStyles-pageTitle-749 css-scgx7b-MuiTypography-root"
        data-selenium="neon-page.title"
      >
        Section B
      </h1>
      <div>
        stub component B
      </div>
    </div>
  </div>,
  <footer
    id="footer"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-153n0d3-MuiSkeleton-root"
      style={
        {
          "height": "300px",
          "width": "100%",
        }
      }
    />
  </footer>,
]
`;
